fix(login-form): make into html form, and add whitespace

--- a/src/sass/components/loginForm.scss
+++ b/src/sass/components/loginForm.scss
@@ -16,5 +16,8 @@
             border-radius: 4px;
         }
     }
+    &__input{
+        margin-bottom: 10px;
+    }
     
 }
